unpackaged/main/default/objects/Partner_Pay_Requisition__c/Partner_Pay_Requisition__c.object-meta.xml
<CustomObject>
    <label>Partner Pay Requisition</label>
    <nameField>
        <displayFormat>PPR-{000000}</displayFormat>
        <label>Partner Pay Requisition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Pay Requisitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>