unpackaged/main/default/objects/Partner_Pay_Requisition__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Partner Pay Requisitions</relationshipLabel>
    <relationshipName>Partner_Pay_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>