unpackaged/main/default/objects/Partner_Pay_Requisition__c/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <inlineHelpText>Date of referral amount payment to Partner</inlineHelpText>
    <label>Paid Date</label>
    <type>DateTime</type>
</CustomField>