unpackaged/main/default/objects/Partner_Pay_Requisition__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>it seems like this Account is not a Partner Account</errorMessage>
        <filterItems>
            <field>Account.Is_Partner_Account__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Pay Requisitions</relationshipLabel>
    <relationshipName>Partner_Pay_Requisitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>