unpackaged/main/default/objects/Partner_Pay_Requisition__c/fields/Partner_Pay_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Pay_Status__c</fullName>
    <label>Partner Pay Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ready to Pay</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>